--- a/css/specific.css
+++ b/css/specific.css
@@ -127,6 +127,7 @@
     align-items: center;
     max-width: unset;
     gap: 0;
+    position: relative;
 }
 .half_panel-hero .column,
 .collections-hero .column {
@@ -139,15 +140,48 @@
     background-size: cover;
     background-position: center center;
     height: var(--hero-height);
-    min-height: 50vw;
-    min-height: 50vw;
-    min-height: 50vw;
+    /* min-height: 50vw; */
+    min-height: calc(var(--hero-height)) - (var(--gutter)*2);
     /* padding: var(--gap); */
+}
+@media screen and (max-width: 1080px) {
+    .half_panel-hero .row {
+        justify-content: center;
+        height: var(--hero-height);
+        width: 100vw;
+    }
+    .half_panel-hero .column.full-width-bg:first-of-type {
+        max-width: calc(100% - (var(--gap)*2));
+        height: calc((var(--hero-height)) - (var(--gutter)*2)/2);
+        position: absolute;
+        z-index: 11;
+        /* left:var(--gutter); */
+        top: var(--gutter);
+        justify-content: flex-start;
+    }
+    .half_panel-hero .column.full-width-bg:last-of-type {
+        width: 100vw;
+        height:var(--hero-height);        
+        justify-content: flex-end;
+    }
+
+    .half_panel-hero .column.full-width-bg:first-of-type .img_wrap,
+    .half_panel-hero .column.full-width-bg:first-of-type .img_wrap img {
+        width: 100%;
+        height: 100%;
+        max-height: calc((var(--hero-height) - (var(--gutter)*2))/2);
+        max-width: calc((100vw - (var(--gutter)*2)));
+        object-fit: cover;
+        /* aspect-ratio: 1 / 1; */
+    }
+    
+    
 }
 .half_panel-hero .column .card,
 .collections-hero .column .card {    
     
     max-width: calc(50vw - (var(--gutter)*2));
+    min-height: calc(var(--hero-height)) - (var(--gutter)*2);
     aspect-ratio: 1 / 1;
     overflow: hidden;
     padding-top: var(--gutter);
@@ -155,35 +189,47 @@
 
 }
 @media screen and (max-width: 1080px) {
-    .half_panel-hero .column .card,
     .collections-hero .column .card {
         max-width: calc(50vw - (var(--gap)*2));
     }
-}
-
-
-@media screen and (max-width: 880px) {
-    .half_panel-hero .column:has(.card) {
-        margin: 0vh auto 3rem;
-        box-sizing: border-box;
-        width: calc(var(--max-width) - (var(--gutter)*2));
-        z-index: 111;
+    .half_panel-hero .card {
+        max-width: calc(50vw - (var(--gap)*2));
+        max-height: calc((var(--hero-height) - (var(--gutter)*2))/2);
+        margin-bottom: var(--gutter);
     }
 }
 
 @media screen and (max-width: 880px) {
+    .half_panel-hero .full-width-bg .img_wrap,
+    .half_panel-hero .full-width-bg .img_wrap img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .half_panel-hero .column:has(.card) {
+        /* margin: 0vh auto 3rem; */
+        box-sizing: border-box;
+        /* width: calc(var(--max-width) - (var(--gutter)*2)); */
+        z-index: 0;
+    }
+}
+
+@media screen and (max-width: 1080px) {
     .half_panel-hero .column .card,
     .collections-hero .column .card {    
-    
-        max-width: calc(var(--max-width) * 8/10);
-        
+        /* max-width: calc(var(--max-width) * 8/10); */
+        max-width: calc((100vw - (var(--gutter)*2)));
+        height: 100%;
+        aspect-ratio: unset;
     }
 }
 
 .half_panel-hero img {
     height: var(--hero-height);
-    min-height: 50vw;
-    min-height: 50vw;
+    min-height: calc(var(--hero-height)) - (var(--gutter)*2);
     object-fit: cover;
 }
 
@@ -227,6 +273,7 @@
     gap: var(--gap);
 }
 @media screen and (max-width: 1080px) {
+    
     .featured-hero .column .card,
     .customised-hero .column .card {
         max-width: calc(50vw - (var(--gap)*2));
