--- a/css/cards.css
+++ b/css/cards.css
@@ -5,7 +5,7 @@
 .card {
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     /* gap: var(--gap-sm); */
     /* border: 1px solid var(--primary); */
@@ -511,6 +511,7 @@
     width: 100%;
     max-width: calc(var(--one-third-max-width-smgap));
     overflow: hidden;
+    align-items: flex-start;
 }
 
 .grid-collection a:hover .card-img  {
