--- a/css/heros.css
+++ b/css/heros.css
@@ -67,6 +67,7 @@ body:not(.home) .hero {
     position: absolute;
     z-index: 11;
     height: var(--hero-height);
+    min-height: 50vw;
     width: 70vw;
     content: '';
 }
@@ -78,6 +79,7 @@ body:not(.home) .hero {
     background-image: linear-gradient(-91deg, rgba(0, 0, 0, 0.7), transparent);
     right: 0;
 }
+
 
 .dark_grad .row,
 .dark_grad_right .row {
@@ -92,6 +94,7 @@ body:not(.home) .hero {
         bottom: 0;
         background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), transparent);
     }
+    
 }
 @media screen and (max-width: 1080px) {
     .dark_grad:after {
@@ -106,6 +109,14 @@ body:not(.home) .hero {
         bottom: 0;
         background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.5), transparent);
     }
+    .fullwidth-feature.dark_grad:after {
+        height: var(--hero-height);
+        min-height: unset;
+        width: 100vw;
+        bottom: unset;
+        background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3));
+    }
+
 }
 
 /* horiz grad for text */
