--- a/css/cards.css
+++ b/css/cards.css
@@ -598,7 +598,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     gap: var(--gap-large) ;
 }
