--- a/css/project-popup.css
+++ b/css/project-popup.css
@@ -123,7 +123,7 @@
     transform: scale(1);
 }
 .project-pop-up .carousel .project-image:hover img {
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
 }
 
 /*  */
@@ -221,6 +221,15 @@
     margin-bottom: 0;
 }
 
+.project-details h4 {
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-underline-offset: 0.2em;
+    font-size: 1em;
+    /* font-size: var(--font-size-h4);
+    font-weight: var(--base-weight);
+    margin-bottom: 0.5rem; */
+}
 
 .project-details p {
     margin-bottom: 0.25rem;
@@ -235,6 +244,17 @@
 .project-description p {
     max-width: 75ch;
     margin-bottom: 0.5rem;
+}
+
+.project_featured_products a {
+    text-decoration: none;
+    font-weight: var(--base-weight);
+    transition: var(--transition-button);
+}
+.project_featured_products a:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.2em;
+
 }
 
 /* CLOSE */
