--- a/css/specific.css
+++ b/css/specific.css
@@ -60,7 +60,7 @@
 }
 .overflow_section .row:not(.column-reverse-mob) .column:not(.four-tenths) {
     align-items: center;
-    padding-left: var(--gap);
+    padding-left: var(--gutter);
     /* justify-content: flex-start; */
     justify-content: center;
     /*  */
@@ -82,6 +82,8 @@
 .overflow_section .column-reverse-mob .column-text {
     max-width: 60vw;
     justify-content: flex-start;
+    padding-left: var(--gutter);
+
 }
 
 .overflow_section .column.four-tenths,
