Refactor CSS styles for buttons, sections, and layout; add new classes for improved structure and responsiveness

--- a/css/articles.css
+++ b/css/articles.css
@@ -64,6 +64,10 @@
     margin-top: var(--gap);
 }
 
+.article-results-tab-wrap a {
+    text-decoration: none;
+}
+
 .article-results-tab-item {
     font-weight: var(--base-font-weight) !important;
     font-size: var(--font-size-sm-link);
@@ -93,6 +97,9 @@
         text-decoration: underline;
         text-underline-offset: 5px;
         text-decoration-color: var(--tertiary);
+    }
+    &.active:hover {        
+        text-decoration-color: var(--primary);
     }
 }
 a.article-results-tab-item,
