--- a/css/specific.css
+++ b/css/specific.css
@@ -693,6 +693,7 @@ section.half-width-img img {
     /* or  */
     flex-grow: 1; 
     /* min-height: (var(--hero-height) - (var(--gutter)*2)) */
+    justify-content: flex-start;
 }
 @media screen and (max-width: 1080px) {
     .half_panel .column,
@@ -758,7 +759,8 @@ section.half_panel-img_padding img {
 @media screen and (max-width: 1080px) {
     section.half_panel-img_padding img {
         max-width: var(--max-col-width);
-    }    
+    }  
+       
 }
 
 .half_panel .text_wrap,
@@ -820,6 +822,13 @@ section.half_panel-img_padding img {
     height: var(--hero-height);
     min-height: 50vw;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#Certifications-Declaration.fullwidth-feature,
+#apaisermarble.fullwidth-feature {
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
 }
 
 .fullwidth-feature h2 {
