--- a/css/layout.css
+++ b/css/layout.css
@@ -61,8 +61,12 @@
     align-items: flex-end !important; 
 }
 
-.align-end .column:last-of-type .text_wrap {
+/* .align-end .column:last-of-type .text_wrap */
+.align-end .column .text_wrap {
     justify-content: flex-end;
+}
+.align-end blockquote {
+    margin-bottom: 0;
 }
 
 .margin-auto { margin: auto; }
