--- a/css/articles.css
+++ b/css/articles.css
@@ -81,6 +81,10 @@
     max-width: 800px;
 }
 
+.legacy_post .content p:last-of-type {
+    margin-top: 2rem;
+}
+
 .legacy_post .content img {
     margin-top: 2rem;
     margin-bottom: 1rem;
@@ -156,6 +160,7 @@ button.article-results-tab-item {
 .legacy_post .content .project-carousel img {
     margin-top: 0;
     margin-bottom: 0;
+    min-width: unset;
 }
 
 .legacy_post .content .project-description {
@@ -164,6 +169,29 @@ button.article-results-tab-item {
 
 .legacy_post .content .project-content .project-details {
     min-width: fit-content;
+}
+
+/* .legacy_post .project-content .project-image {
+    min-height: 100%;
+    height: 400px;
+    background-color: var(--primary);
+    line-height: 0;
+} */
+
+.project-content.single-project-carousel  .carousel-cell:not(:last-of-type) {
+    margin-right: var(--gap-xs);
+}
+
+.project-content.single-project-carousel .carousel-cell {
+    width: unset;
+}
+
+.project-content.single-project-carousel .project-carousel img {
+    width: unset;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
 }
 
 .legacy_post .content .project-content .flickity-prev-next-button.previous {
