--- a/css/project-popup.css
+++ b/css/project-popup.css
@@ -70,6 +70,7 @@
 @media screen and (max-width: 1080px){
     .project-content {
         flex-direction: column;
+        padding: 1rem;
         /* max-height: 80vh; */
     }
 }
@@ -171,6 +172,12 @@
     gap: var(--gap); 
     margin-top: 1rem;
 }
+@media screen and (max-width: 1080px){
+    .project-content .project-bottom {
+        flex-direction: column;
+        /* gap: 1rem; */
+    }
+}
 
 
 .project-content .project-details {
@@ -220,6 +227,12 @@
     text-transform: none !important;
     margin-bottom: 0;
 }
+@media screen and (max-width: 1080px){
+    .project-content h2.project-title,
+    .project-header h2.project-title {
+        font-size: 1.5em;
+    }
+}
 
 .project-details h4 {
     text-transform: uppercase;
@@ -240,6 +253,11 @@
     /* column-width: 30vw;
     column-count: 2;
     column-gap: var(--gap); */
+}
+@media screen and (max-width: 1080px){
+    .project-description {
+        overflow-y: auto;
+    }
 }
 .project-description p {
     max-width: 75ch;
