--- a/css/search-results.css
+++ b/css/search-results.css
@@ -12,26 +12,26 @@
 @media screen and (max-width: 1200px) {
     :root {
         /* --results-col: 200px; */
-        --results-col-mw: calc(var(--max-width-new) - var(--results-col) - (var(--gap-xs) * (1)));
-        --results-cards-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap-xs) * (1))));
-        --results-horiz-cards-mw: 95vw;
-        --results-horiz-img-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap) * (2))) / 3);
+        /* --results-col-mw: calc(var(--max-width-new) - var(--results-col) - (var(--gap) * (1))); */
+        /* --results-cards-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap-xs) * (1)))); */
+        --results-cards-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap) * (3))) / 2);
+        --results-horiz-img-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap) * (2))) / 4);
 
     }    
 }
 @media screen and (max-width: 1080px) {
     :root {
         /* --results-col: 200px; */
-        --results-col-mw: calc(var(--max-width-new) - var(--results-col) - (var(--gap-xs) * (1)));
-        --results-cards-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap-xs) * (1/3))));
-        --results-horiz-cards-mw: 95vw;
+        /* --results-col-mw: calc(var(--max-width-new) - var(--results-col) - (var(--gap-xs) * (1))); */
+        /* --results-cards-mw: calc(((var(--max-width-new) - var(--results-col)) - (var(--gap-xs) * (1/3))));
+        --results-horiz-cards-mw: 95vw; */
     }    
 }
 
 @media screen and (max-width: 880px) {
     :root {
         /* --results-col: 200px; */
-        --results-col-mw: calc(var(--max-width-new) - (var(--gap-xs) * (1)));
+        /* --results-col-mw: calc(var(--max-width-new) - (var(--gap-xs) * (1))); */
         --results-cards-mw: calc(((var(--max-width-new) - (var(--gap-xs) * (1/3)))));
         --results-horiz-cards-mw: 90vw;
     }    
@@ -47,19 +47,76 @@
     
 }
 
+.filter_wrap {
+    width: 100%;
+    max-width: calc(100vw - (var(--gap)*2));
+    /* margin-left: var(--gap-large); */
+    padding: 0 var(--gap) ;
+}
+
+.filter {
+    width: calc(100% - 20px);
+    max-width: calc(var(--max-width-new) - (var(--gap)*2));
+}
+
+.filter form {
+    max-width: unset;
+}
+
+/*  */
+
+@media screen and (max-width: 880px) {
+    #refine-search  {
+        display: none;
+        align-content: flex-start;
+    }
+    #refine-search.show-filter {
+        display: flex;
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+#refine input#s {
+    width: 205px;
+}
+
+.search-results-tab-wrap {}
+
+.search-results-tab-wrap a.filter-toggle {
+    display: none;
+}
+@media screen and (max-width: 880px) {
+    .search-results-tab-wrap a.filter-toggle {
+        display: block;
+    }
+}
+
+
+.search-results-tab-filters-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: var(--gap);
+    margin-top: 0;
+}
+
+/*  */
+
 .sidebar {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 1rem;
-    padding: var(--gap-xs);
+    padding: var(--gap-xs) var(--gap) var(--gap-xs) 0;
     width: 100%;
     max-width: calc(var(--results-col) - var(--gap-xs));
     box-sizing: border-box;
     position: absolute;
     left: var(--gap);
-    padding-right: var(--gap);
+    /* padding-right: var(--gap); */
 }
 @media screen and (max-width: 880px) {
     .sidebar {
@@ -85,7 +142,8 @@
 }
 
 [class*="-toggle"] {
-    font-weight: 300;
+    font-weight: 400;
+    opacity: 0.7;
 }
 
 .search-results .grid-results {
@@ -102,7 +160,7 @@
 .article-description {
     margin-top: 0.5rem;
     font-size: var(--font-size-sm);
-    line-height: var(--line-height-sm);
+    line-height: var(--line-height);
 }
 
 input.search-icon,
@@ -155,13 +213,15 @@ form.searchform input[type="submit"] {
 /* refine */
 
 
-#refine { width: 100%; }
+
 
 @media screen and (max-width: 880px) {
     #refine {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        width: calc(var(--max-width-new) -(var(--gap)* 2)); 
+        max-width: unset;
     }
 }
 
@@ -195,12 +255,32 @@ form.searchform input[type="submit"] {
 @media screen and (max-width: 880px) {
     .refine-search, 
     #refine-search {
-        min-width: 90vw;
-        width: 100%;
+        /* min-width: 90vw; */
+        /* width: 100%; */
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+        /*  */
+        width: 100vw;
+        height: 100vh;
+        max-width: calc(100vw - (var(--gap)*2));
+        background-color: white;
+        padding: var(--gap);
+        /* padding-left: 0; */
         flex-direction: unset;
         flex-wrap: wrap;
-        gap: var(--gap-large)
+        gap: var(--gap-large);
+        /*  */
+        position: absolute;
+        left: calc(var(--gap)* -1);
+        z-index: 1111;
+
     }
+}
+#refine-search .show-filter {
+    display: flex;
+    visibility: visible;
+    opacity: 1;
 }
 
 .refine-search input[type="submit"], 
@@ -209,22 +289,76 @@ form.searchform input[type="submit"] {
 }
 
 
-/*  */
+#refine-search .close-filter {
+    display: none;
+}
+@media screen and (max-width: 880px) {
+    #refine-search .close-filter {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: var(--gap);
+        padding: 1rem;
+        cursor: pointer;
+    }
+}
 
 
-#refine .facetwp-facet {
+#refine .facetwp-facet,
+.facetwp-facet {
     margin-bottom: 1rem;
+    /* display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1rem; */
+}
+@media screen and (max-width: 880px) {
+    #refine .facetwp-facet,
+    .facetwp-facet {
+        /* flex-direction: row;
+        flex-wrap: wrap; */
+    }
+}
+
+/* top filter */
+#post_type_filter .facetwp-facet {
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+@media screen and (max-width: 880px) {
+    #post_type_filter .facetwp-facet {
+        /* flex-direction: row;
+        flex-wrap: wrap; */
+    }
 }
 
 #refine .facetwp-facet.facetwp-type-slider {
     margin-bottom: 0;
 }
 
-#refine .facetwp-checkbox {
+.search-results .facetwp-checkbox,
+#refine .facetwp-checkbox,
+.facetwp-checkbox {
     background: none;
     /* background-size: 14px 14px; */
     margin-bottom: 0;
     padding-left: 0; 
+    gap: 0.125rem;
+    display: flex;
+}
+
+.facetwp-counter {
+    /* font-size: 0.8rem; */
+    /* color: var(--gray-500); */
+    opacity: 0.7;
+    font-weight: 300;
+}
+
+.facetwp-checkbox.checked {
+    background-image: none;
 }
 
 /* -- */
@@ -237,6 +371,7 @@ form.searchform input[type="submit"] {
     min-height: 825px;
     padding-left: var(--results-col);
     align-items: flex-start;
+    justify-content: flex-start;
     padding-top: 0;
     gap: var(--gap);
 }
@@ -273,7 +408,8 @@ form.searchform input[type="submit"] {
     align-items: flex-start;
 }
 .grid-results .grid-col.column{
-    gap: var(--gap) var(--gap-xs);
+    /* gap: var(--gap) var(--gap-xs); */
+    gap: var(--gap);
 }
 
 .grid-results .grid-col-horiz.column {
@@ -326,6 +462,7 @@ form.searchform input[type="submit"] {
 .grid-col-horiz .card img {
     width: 100%;
     /* aspect-ratio: 1 / 1; */
+    min-width: calc(var(--results-horiz-img-mw));
     max-width: calc(var(--results-horiz-img-mw))
 }
 @media screen and (max-width: 1080px){
@@ -372,7 +509,7 @@ form.searchform input[type="submit"] {
     padding: 0;
 }
 
-.grid-col-horiz .card-content {
+.search-results .grid-col-horiz .card-content {
     align-items: flex-start;
     padding: 0;
     /* padding-top: var(--gap-sm); */
@@ -390,7 +527,9 @@ form.searchform input[type="submit"] {
     -webkit-font-smoothing: auto;
     -moz-osx-font-smoothing: auto;
 }
-.grid-results #articles h3 {
+.grid-results #articles h3,
+.grid-results #post h3,
+.grid-results #projects h3 {
     text-transform: uppercase;
 }
 
@@ -421,8 +560,8 @@ form.searchform input[type="submit"] {
 .search-results-tab-wrap {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-end;
     gap: var(--gap);
     margin-top: 0;
 }
@@ -443,6 +582,10 @@ form.searchform input[type="submit"] {
     text-underline-offset: 3px;
     position: relative;
     transform: var(--transition-button);
+    display: flex;
+    flex-direction: row;
+    gap: 0.25rem;
+    
     
     &:hover {
         color: var(--primary);
@@ -458,6 +601,12 @@ form.searchform input[type="submit"] {
         text-decoration-color: var(--tertiary);
     }
 }
+
+.search-results-tab-item span {
+    opacity: 0.7;
+    font-weight: 300;
+}
+
 a.search-results-tab-item,
 button.search-results-tab-item {
     margin-top: 1rem;
@@ -468,3 +617,10 @@ form.searchform input[type="submit"] {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+/* no-UI */
+
+.noUi-handle {
+    border-radius: 50%
+}
+
