--- a/css/subscribe-popup.css
+++ b/css/subscribe-popup.css
@@ -52,7 +52,7 @@
 
 @media screen and (max-width: 480px) {
     .subscribe-pop-up_wrapper {
-        max-width: calc(var(--max-width));
+        /* max-width: calc(var(--max-width)); */
     }
 }
 
